--- a/web/tricking-admin-favorite-animal/challenge.yaml
+++ b/web/tricking-admin-favorite-animal/challenge.yaml
@@ -1,7 +1,7 @@
 name: tricking the admin for their favorite animal
 author: burturt
 description: |-
-  I need you to steal the admin's favorite animal and get it to me. If you go to [admin-bot.acmcyber.com/tricking-admin-favorite-animal](admin-bot.acmcyber.com/tricking-admin-favorite-animal) they might just visit your url!
+  I need you to steal the admin's favorite animal and get it to me. If you go to [admin-bot.acmcyber.com/tricking-admin-favorite-animal](admin-bot.acmcyber.com/tricking-admin-favorite-animal) they might just visit your link!
 
   [favorite-animal.acmcyber.com](favorite-animal.acmcyber.com)
 value: 20
