--- a/crypto/gaslight/challenge.yml
+++ b/crypto/gaslight/challenge.yml
@@ -3,7 +3,7 @@ author: Benson
 description: |-
   I want to keep all of my favorite quotes from "Mean Girls" a secret. If I gaslight you enough, then you won't be able to see them. 😉
 
-  This might help you find them, https://www.dcode.fr/caesar-cipher.
+  This might help you find them, [https://www.dcode.fr/caesar-cipher](https://www.dcode.fr/caesar-cipher).
 value: 10
 
 flag: "cyber{g4rL_B0s3}"
