chall updates, add point vals, use actual name

--- a/misc/bond-together/challenge.yaml
+++ b/misc/bond-together/challenge.yaml
@@ -1,5 +1,5 @@
 name: bond together!
-author: burturt
+author: Alec Machlis
 description: |-
   When you entered the room, you should've received a piece of paper. On this piece of paper is 1/4th of the flag for this challenge. Introduce yourself to at least 2 other people so that you have parts 1, 2, and 3, and together find an officer to receive the last portion of the flag!
 
