--- a/web/getting-favorite-animal/challenge.yaml
+++ b/web/getting-favorite-animal/challenge.yaml
@@ -1,5 +1,5 @@
 name: getting my favorite animal
-author: burturt
+author: Alec Machlis
 description: |-
   Can you please get my favorite animal? I set my favorite animal under my username burturt but then I closed my browser and poof! gone!
 
@@ -8,3 +8,15 @@ value: 10
 
 flag:
   file: "../favorite-animal/getting-favorite-animal-flag.txt"
+
+provide:
+  - "../favorite-animal/favorite-animal.zip"
+
+containers:
+  favorite-animal-web:
+    build: "../favorite-animal"
+    ports: [3000]
+expose:
+  favorite-animal-web:
+    - target: 3000
+      http: favorite-animal
