--- a/misc/wanna-cry-again/challenge.yaml
+++ b/misc/wanna-cry-again/challenge.yaml
@@ -3,6 +3,8 @@ author: Alec Machlis
 description: |-
   In a not-so-distant-ago time, a certain malware called WannaCry took the news by storm, infecting millions of computers and encrypting files, held for a ransom payment. However, an even more powerful malware abusing the same exploit did over twice as much economic estimated damage than WannaCry, yet got barely any news coverage. What is the name of this malware?
 
+  Answer in lowercase in flag form, like cyber{stuxnet}
+
 flag: "cyber{notpetya}"
 
 value: 5
