feat: created `tik-tok`

--- a/soc-eng/far-from-home/challenge.yml
+++ b/soc-eng/far-from-home/challenge.yml
@@ -1,5 +1,5 @@
 name: far-from-home
-author: Benson
+author: Benson Liu
 description: |-
   Sometimes I miss my home far away... find 3 members + 1 officer who is an out-of-state student!
 
