--- a/crypto/gaslight/challenge.yml
+++ b/crypto/gaslight/challenge.yml
@@ -1,5 +1,5 @@
 name: gaslight
-author: Benson
+author: Benson Liu
 description: |-
   I want to keep all of my favorite quotes from "Mean Girls" a secret. If I gaslight you enough, then you won't be able to see them. 😉
 
