--- a/crypto/bruin-bash/challenge.yaml
+++ b/crypto/bruin-bash/challenge.yaml
@@ -1,7 +1,7 @@
 name: Bruin Bash
 author: Victoria
 description: |-
-  I was AT bruin BASH dancing away when I noticed someone with a poster that had 'qznnrm_gl_blfmt_mfwb' written on it. I wonder what it says?
+  I was AT bruin BASH trying to enter the stadium when the guards stopped me. They said I needed to solve a puzzle to get in and handed me a paper with 'qznnrm_gl_blfmt_mfwb' written on it. Can you help me?
 
   Wrap the answer in `cyber{}` before submitting.
 value: 10
