update social chall with web

--- a/soc-eng/bond-together/challenge.yaml
+++ b/soc-eng/bond-together/challenge.yaml
@@ -1,7 +1,9 @@
 name: bond together!
 author: Alec Machlis
 description: |-
-  When you entered the room, you should've received a piece of paper. On this piece of paper is 1/4th of the flag for this challenge. Introduce yourself to at least 2 other people so that you have parts 1, 2, and 3, and together find an officer to receive the last portion of the flag!
+  All of you are entitled to a free... 1/4th of the flag! Visit [https://bond-together.acmcyber.com](https://bond-together.acmcyber.com) to get your free 1/4th of the flag!
+  
+  Introduce yourself to at least 2 other people so that you have parts 1, 2, and 3, and together find Alec to receive the last portion of the flag!
 
   Flag inspired by [https://xkcd.com/936/](https://xkcd.com/936/)
 value: 20
