--- a/web/cybrick-inventory/challenge.yaml
+++ b/web/cybrick-inventory/challenge.yaml
@@ -5,19 +5,8 @@ description: >-
   There's just one problem - it's protected by the most complicated authentication system you've ever seen!
   Can you find the secret to making a Cybrick™?
 
-  {{link}}
+  [cybrick-inventory.acmcyber.com](https://cybrick-inventory.acmcyber.com)
 
 flag: "cyber{cybr1ck5_ar3_mad3_w1th_l0v3}"
 value: 25
 
-containers:
-  main:
-    build: .
-    replicas: 1
-    ports:
-      - 80
-
-expose:
-  main:
-    - target: 80
-      http: cybrick-inventory
