--- a/web/getting-favorite-animal/challenge.yaml
+++ b/web/getting-favorite-animal/challenge.yaml
@@ -3,7 +3,7 @@ author: Alec Machlis
 description: |-
   Can you please get my favorite animal? I set my favorite animal under my username burturt but then I closed my browser and poof! gone!
 
-  [favorite-animal.acmcyber.com](favorite-animal.acmcyber.com)
+  [favorite-animal.acmcyber.com](https://favorite-animal.acmcyber.com)
 value: 10
 
 flag:
@@ -11,12 +11,3 @@ flag:
 
 provide:
   - "../favorite-animal/favorite-animal.zip"
-
-containers:
-  favorite-animal-web:
-    build: "../favorite-animal"
-    ports: [3000]
-expose:
-  favorite-animal-web:
-    - target: 3000
-      http: favorite-animal
