--- a/web/stealing-favorite-animal-flag/challenge.yaml
+++ b/web/stealing-favorite-animal-flag/challenge.yaml
@@ -3,7 +3,7 @@ author: Alec Machlis
 description: |-
   Actually I also lost my flag on the favorite animals server. Can you get it? It should be at just the file location /flag.txt
 
-  [favorite-animal.acmcyber.com](favorite-animal.acmcyber.com)
+  [favorite-animal.acmcyber.com](https://favorite-animal.acmcyber.com)
 value: 20
 
 flag:
