add shell.cloud.google.com link

--- a/rev/my-lock-v2/challenge.yaml
+++ b/rev/my-lock-v2/challenge.yaml
@@ -2,6 +2,8 @@ name: my lock v2
 author: Alec Machlis
 description: |-
   Since you broke my first lock, I've made a stronger one!
+
+  If you can't run my lock on your computer, check out [https://shell.cloud.google.com](https://shell.cloud.google.com)
 value: 35
 
 flag: "cyber{x0r_s741ng_1n_m3m0ry}"
