--- a/rev/my-lock/challenge.yaml
+++ b/rev/my-lock/challenge.yaml
@@ -2,6 +2,8 @@ name: my lock
 author: Alec Machlis
 description: |-
   I made a lock. I bet you can't break it!
+
+  If you can't run my lock on your computer, check out [https://shell.cloud.google.com](https://shell.cloud.google.com)
 value: 10
 
 flag: "cyber{un3nc4yp13d_47r1ng_c0mp4r3}"
