--- a/misc/starry-night/challenge.yaml
+++ b/misc/starry-night/challenge.yaml
@@ -3,6 +3,8 @@ author: Michelle Zhao
 description: |-
   I wish I could turn back time and see what photo my favorite stargazing blogger posted on [https://zhamic7.github.io/starry-night](https://zhamic7.github.io/starry-night)... 
 
+  Maybe there's a site that archives all of these websites online and would allow you to go way back?
+
 flag: "cyber{wh3n_u_w1sh_up0n_4_st4r}"
 
 value: 15
