--- a/web/cybrick-inventory/challenge.yaml
+++ b/web/cybrick-inventory/challenge.yaml
@@ -7,6 +7,8 @@ description: >-
 
   [cybrick-inventory.acmcyber.com](https://cybrick-inventory.acmcyber.com)
 
+  Hint: 
+
 flag: "cyber{cybr1ck5_ar3_mad3_w1th_l0v3}"
 value: 25
 
