--- a/soc-eng/birds-of-a-feather/challenge.yaml
+++ b/soc-eng/birds-of-a-feather/challenge.yaml
@@ -4,4 +4,4 @@ description: |-
   Find someone who lives near you/in the same dorm! Come talk to Gary for the flag
 value: 10
 
-flag: "cyber{i_l0v3_h3drick_h4ll!}"
+flag: "cyber{i_love_hedrick_hall}"
