--- a/forensics/crazy-daves-maze/challenge.yaml
+++ b/forensics/crazy-daves-maze/challenge.yaml
@@ -4,7 +4,7 @@ description: |-
   BRAINNNNNNNSSSSS. Unfortunately, you have been turned into a zombie. Fortunately, however, you happen to have access to the backyard of a food source. Crazy Dave is protecting this house, but you think that even as a zombie, you have more brains than him. Can you outsmart him and find the solution to this maze?
 value: 40
 provide:
-  - ./maze.zip
+  - ./plant0.zip
 
 
 flag: "flag{the_zombies_are_coming}"
