--- a/eCTF/girlbossslay/challenge.yaml
+++ b/eCTF/girlbossslay/challenge.yaml
@@ -1,4 +1,4 @@
-name: girlboss
+name: girlbossslay
 author: Gary Song
 description: |- 
   RSA is secure if you keep both primes secret, but I'll give you one cause I'm a girlboss who doesn't need both primes
