--- a/.github/workflows/rcds-dry-run.yml
+++ b/.github/workflows/rcds-dry-run.yml
@@ -1,6 +1,6 @@
 name: rcds check
 
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   build:
@@ -9,16 +9,17 @@ jobs:
     - uses: actions/checkout@v4
       with:
         path: 'challs'
+    - name: Create rcds requirements.txt
+      run: |
+        echo "git+https://github.com/uclaacm/rcds.git" > requirements.txt
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
         python-version: 3.11
         cache: 'pip'
-        key: 'rcds'
     - name: Install rcds
-      working-directory: 'rcds'
       run: |
-        pip install git+https://github.com/uclaacm/rcds.git
+        pip install -r requirements.txt
     - name: Overwrite rcds.yaml with basic blank config
       working-directory: 'challs'
       run: |
