add data breach chall; consistent author naming

--- a/forensics/a-thousand-zip-up-jackets/challenge.yaml
+++ b/forensics/a-thousand-zip-up-jackets/challenge.yaml
@@ -1,5 +1,5 @@
 name: a thousand zip-up jackets
-author: Alec
+author: Alec Machlis
 description: |-
   It was freezing cold outside, so I put on some jackets, but I think I zipped up too many layers on me! Can you unzip all of the jackets off of me?
 
