--- a/forensics/search-terms/challenge.yaml
+++ b/forensics/search-terms/challenge.yaml
@@ -1,5 +1,5 @@
 name: search terms
-author: Alec
+author: Alec Machlis
 description: |-
   I caught someone using my computer, but they deleted the logs! I did capture this network traffic - can you tell me what they searched on google while on my computer?
 
