--- a/web/my-insecurity/challenge.yaml
+++ b/web/my-insecurity/challenge.yaml
@@ -1,5 +1,5 @@
 name: my-insecurity
-author: Alec
+author: Alec Machlis
 description: |-
   I found this web server that's revealing my insecurities :(
 
