--- a/web/redirect-to-nowhere/challenge.yaml
+++ b/web/redirect-to-nowhere/challenge.yaml
@@ -1,5 +1,5 @@
 name: redirect to nowhere
-author: Alec
+author: Alec Machlis
 description: |-
   We've intercepted a message from a dark web group, but all it contains is a single link that redirects to google! Can you help find the hidden message?
 
