--- a/misc/secret-bunker/challenge.yaml
+++ b/misc/secret-bunker/challenge.yaml
@@ -1,5 +1,5 @@
 name: secret bunker
-author: Alec
+author: Alec Machlis
 description: |-
   I found [this secret bunker](https://docs.google.com/forms/d/e/1FAIpQLSdR5hpidF1WgxjGmlb5JN-q0x5or5OIzKJP7hxS02HmPorfzQ/viewform?usp=sf_link). Can you try and break in?
 
