--- a/misc/twitter-politics/challenge.yaml
+++ b/misc/twitter-politics/challenge.yaml
@@ -1,5 +1,5 @@
 name: twitter politics
-author: Alec
+author: Alec Machlis
 description: |-
   At exactly 9:27 p.m. EST November 3rd, the associated press politics division called that [person] won [location] in the 2020 US presidential election, announcing it on twitter.
 
