oh no i left off the e

--- a/pwn/escape-rope/challenge.yaml
+++ b/pwn/escape-rope/challenge.yaml
@@ -9,7 +9,7 @@ flag: "cyber{magikarp_jump_best_game_dont_@_me}"
 value: 50
 
 provide:
-  - escape-rope.c
+  - escape-rop.c
   - escape-rop
 
 containers:
