fix misc/twitter-politics formatting

--- a/misc/twitter-politics/challenge.yaml
+++ b/misc/twitter-politics/challenge.yaml
@@ -1,7 +1,7 @@
 name: twitter politics
 author: Alec Machlis
 description: |-
-  At exactly 9:27 p.m. EST November 3rd, the associated press politics division called that [person] won [location] in the 2020 US presidential election, announcing it on twitter.
+  At exactly 9:27 p.m. EST November 3rd, the associated press politics division called that &#91;person&#93; won &#91;location&#93; in the 2020 US presidential election, announcing it on twitter.
 
   Fill in the blanks and submit the flag as `cyber{[person]_[location]}`, like `cyber{benson_liu_new_jersey}`
 
