actually fix pwn/escape-rope

--- a/pwn/escape-rope/challenge.yaml
+++ b/pwn/escape-rope/challenge.yaml
@@ -3,7 +3,7 @@ author: andrew
 description: >-
   This battle ain't looking so hot... maybe it's time to use that Escape ROPé?
 
-  `nc box.acmcyber.com 10001`
+  `nc box.acmcyber.com 10002`
 
 flag: "cyber{magikarp_jump_best_game_dont_@_me}"
 value: 50
@@ -11,3 +11,18 @@ value: 50
 provide:
   - escape-rop.c
   - escape-rop
+
+containers:
+  main:
+    build: .
+    replicas: 1
+    ports:
+      - 5000
+    securityContext:
+      privileged: true
+
+expose:
+  main:
+  - target: 5000
+    tcp: 4082
+
