--- a/soc-eng/polyglots/challenge.yaml
+++ b/soc-eng/polyglots/challenge.yaml
@@ -1,7 +1,7 @@
 name: polyglots
 author: Salma
 description: |-
-  Find someone who speaks a language you're currently learning (or are interested in learning). Have them teach you any phrase from said language! Bring them to Salma and say the phrase to get the flag!
+  Find someone who speaks a language you're currently learning (or are interested in learning) that's not English. Have them teach you any phrase from said language! Bring them to Salma and say the phrase to get the flag!
   
 value: 10
 
